width corrected, header and navbar aligned center

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -38,7 +38,7 @@
   font-size: 3rem;
 }
 .m-text {
-  font-size: 1.5rem;
+  font-size: 1.67rem;
 }
 .s-text {
   font-size: 0.5rem;
