--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,12 +34,11 @@ ul {
 
   border-bottom: 1px solid rgba(177, 177, 177, 0.2);
   background: rgba(0, 0, 0, 0.5);
-  padding-left: 2rem;
   transition: background 0.5s ease-in-out;
 
   .navbar-content {
     height: 5rem;
-    width: 70%;
+    max-width: 1140px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -110,50 +109,73 @@ ul {
 
 // Showcase area
 #showcase {
-  background: url("../img/showcase.jpg") no-repeat center center/cover;
-  position: relative;
-  background-attachment: fixed;
+  & > .bg-parallax {
+    background: url("../img/showcase.jpg");
+  }
 
-  // Dark Overlay
-  &::before {
-    content: "";
+  .bg-parallax {
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    position: relative;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+
+    // Dark Overlay
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+    }
+  }
+
+  // Introduction text top container
+  & > *:nth-child(2) {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-  }
 
-  .showcase-content {
-    width: 70%;
-    margin: auto;
-    padding-left: 2rem;
-    color: $light-color;
+    .container {
+      max-width: 1140px;
+      .row {
+        display: flex;
+        align-items: center;
 
-    .wrap {
-      position: absolute;
-      top: 35%;
+        .col {
+          flex: 0 0 60%;
+          max-width: 60%;
+          color: $light-color;
+          position: relative;
+          width: 100%;
+          text-transform: uppercase;
 
-      p {
-        margin: 0;
-        text-transform: uppercase;
-        font-weight: 600;
-        margin-bottom: 0.9rem;
-      }
-
-      h2 {
-        text-transform: uppercase;
-        font-weight: 700;
-
-        span {
-          &:first-child {
-            border-bottom: 5px solid $secondary-color;
+          p {
+            font-weight: 600;
+            margin-bottom: 0.5rem;
           }
 
-          margin-left: -5px;
-          text-align: left;
-          display: block;
+          h2 {
+            font-weight: 700;
+
+            span {
+              margin-left: -5px;
+              display: block;
+
+              &:first-child {
+                padding-bottom: 0.5rem;
+                margin-bottom: 0.6rem;
+                border-bottom: 5px solid $secondary-color;
+              }
+            }
+          }
         }
       }
     }
